# SO_2024_2025

./: CMakeLists.txt  README.md  main.cpp
Logger/: Logger.cpp  Logger.h
Managers/: RandomManager.cpp  RandomManager.h  SemaphoreManager.cpp  SemaphoreManager.h  SleepManager.cpp  SleepManager.h
Processes/: Director.cpp  Director.h  Producer.cpp  Producer.h  Receiver.cpp  Receiver.h
SharedData/: Globals.cpp  Globals.h  SharedData.cpp  SharedData.h  SharedDataManager.cpp  SharedDataManager.h
